user-interface-service/src/main/webapp/estock-ui/src/App.css
body {
    background: url("background2.png") no-repeat fixed;
    background-size: cover;
    height: calc(100vh - 80px);
}

* {
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
}

nav {
    height: 80px;
    width: 100%;
}

label.logo {
    color: #062238;
    font-size: 40px;
    line-height: 80px;
    padding: 0 100px;
    font-weight: bold;
}

nav ul {
    float: right;
    margin-right: 20px;
}

nav ul li {
    display: inline-block;
    line-height: 80px;
    margin: 0 5px;
}

nav ul li a {
    color: #062238;
    font-size: 26px;
    padding: 7px 14px;
    border-radius: 3px;
}

a:hover {
    background: none;
    color: white;
    transition: .5s;
}

.checkBtn {
    font-size: 30px;
    color: white;
    float: right;
    line-height: 80px;
    margin-right: 40px;
    cursor: pointer;
    display: none;
}

#check {
    display: none;
}

.Welcome .content {
    position: absolute;
    top: 240px;
    right: 100px;
    width: 400px;
    height: 150px;
    text-align: center;
    letter-spacing: 0.03em;
    color: #211e1e;
    font-size: 20px;
}

.Welcome h1 {
    color: #ffffff;
    padding-bottom: 16px;
    font-size: 40px;
}

.createAccount {
    margin-top: 20px;
    color: white;
    color: white;
    background-color: #6f6e6e;
    text-decoration: none;
    font-size: 18px;
    padding: 6px 18px;
    border-radius: 25px;
}

.createAccountShort {
    display: none;
}

.SignUp * {
    position: relative;
    margin: 0;
    padding: 0;
}

.SignUp {
    position: absolute;
    right: 60px;
    top: 20px;
}

.SignUp .register {
    margin-top: 35px;
    width: 600px;
    background-color: rgba(0, 0, 0, 0.6);
    margin-left: 700px;
    color: #ffffff;
    padding: 10px 0 10px 0;
    text-align: center;
    border-radius: 15px 15px 0 0;
}

.SignUp .main {
    background-color: rgba(0, 0, 0, 0.5);
    width: 600px;
    margin-left: 700px;
}

.SignUp form {
    padding: 10px
}


.SignUp #name {
    width: 100%;
    height: 100px;
}

.SignUp .name {
    margin-left: 10px;
    margin-top: 30px;
    width: 120px;
    color: white;
    font-size: 18px;
    font-weight: 700;
}

.SignUp .firstName {
    left: 200px;
    top: -37px;
    line-height: 40px;
    border-radius: 6px;
    padding: 0 22px;
    font-size: 16px;
    width: 180px;
}

.SignUp .lastName {
    left: 330px;
    top: -80px;
    line-height: 40px;
    border-radius: 6px;
    padding: 0 22px;
    font-size: 16px;
    color: #555;
    width: 180px;
}

.SignUp .firstLabel {
    color: #E5E5E5;
    text-transform: capitalize;
    font-size: 14px;
    left: 203px;
    top: -45px;
}

.SignUp .lastLabel {
    color: #E5E5E5;
    text-transform: capitalize;
    font-size: 14px;
    left: 152px;
    top: -45px;
}

.SignUp .email, .contactNumber, .password {
    left: 200px;
    top: -34px;
    line-height: 40px;
    width: 380px;
    border-radius: 6px;
    padding: 0 15px;
    font-size: 16px;
    color: #555;
}

.SignUp .registerButton {
    margin-top: 5px;
    margin-left: 250px;
    text-align: center;
    color: #ffffff;
    background-color: #6f6e6e;
    font-size: 22px;
    width: 120px;
    padding: 6px 22px;
    border-radius: 25px;
}

.SignUp a {
    color: #b3a9a9;
}

.SignUp a:hover {
    color: #47742f;
}

.stock {
    position: absolute;
    right: 40px;
    width: 1500px;
    height: 375px;
    margin-top: 20px;
}

.stock .updateGraph{
    display: inline-block;
}

.stock h2{
    margin-right: 80px;
    margin-left: 30px;
}

.stock button{
    margin-top: 5px;
    margin-left: 5px;
    text-align: center;
    color: #ffffff;
    background-color: #6f6e6e;
    font-size: 22px;
    width: 120px;
    padding: 6px 22px;
    border-radius: 25px;
}
.stock-view-card{
    padding: 10px;
    border: 2px solid rgb(98, 78, 78);
    margin: 20px;

}
.stock-view-card h5{
    color:  #003333;
}
.stock-view-card p{
    color:  #004d4d;
}
.stock-view-card button{
    color: black;
    font-size: 20px;
    width: 120px;
    padding: 6px 22px;
    float: inside;
}
.row {
    margin-top: 30px;
    position: inherit;
    display:flex;
    flex-direction:row;
    justify-content: space-around;
}

.row .col2{
    float:left;
    width:50%;
    overflow:hidden;
    margin-top: 30px;
}

.row .col1{
    float:right;
    width:50%;
    overflow:hidden;
}
.ExtendedStockView{
    margin: 80px 10px;
}

.ExtendedStockView .container{
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: 3fr 2fr;
    grid-template-rows: 50% 50%;
}

.ExtendedStockView .item{
    border: 2px solid rgb(98, 78, 78);
    margin: 3px;
    padding: 34px;
}

.ExtendedStockView .daysQuery{
    margin-left: 5%;
    border-bottom: 2px solid #000000;
    text-align: center;
}

.ExtendedStockView .queryType{
    text-align: center;
    display: inline-block;
    margin-right: 10%;
    font-size: 20px;
}

.ExtendedStockView .item:nth-child(3){
    grid-column-start: 2;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 3;
}

.ExtendedStockView .companyDetails{
    display: inline-block;
    font-size: 35px;
    padding: 14px;
}


@media (max-width: 952px) {
    label.logo {
        font-size: 30px;
        padding-left: 50px;
    }

    nav ul li a {
        font-size: 16px;
    }
}

@media (max-width: 1050px) {
    body {
        background: url("background2.png") no-repeat;
        background-size: cover;
        height: calc(118vh - 80px);
    }
}

@media (max-width: 858px) {
    .checkBtn {
        display: block;
    }

    nav {
        background: rgba(133, 134, 138, 0.85);
    }

    ul {
        position: fixed;
        width: 100%;
        height: 100vh;
        background: rgba(137, 138, 140, 0.55);
        top: 80px;
        left: -100%;
        text-align: center;
        transition: all .5s;
    }

    nav ul li {
        display: block;
        line-height: 60px;
    }

    nav ul li a {
        font-size: 24px;
    }

    a:hover {
        background: none;
        color: #0082e6;
    }

    #check:checked ~ ul {
        left: 0;
    }

    .content {
        display: none;
    }

    .createAccountShort {
        display: block;
    }

}

